FEAT:캐릭터 갱신 대기열 구현

--- a/todo.text
+++ b/todo.text
@@ -1,5 +1,16 @@
-getItem 모듈화 
+캐릭터 이미지, 아이템 이미지, 레벨,직업,서버 등등 저장 정보 추가  
 
-info 꾸미기 
+꾸미기 
 
-대기열 
+대기열-> bull 사용 
+
+중복요청 방지 
+
+0. 캐릭터 존재 여부 검사와 캐릭터 정보 받아오기 분리
+1. submit버튼 클릭 시 일정시간 비활성화
+2-1. submit버튼 클릭 시 캐릭터 존재 시 상세페이지로 이동 
+2-1-1. 상세페이지는 db에 정보가 존재하는지 요청을 보낸 후 존재 할 시 해당 내용을 출력
+2-1-2. 존재하지 않을 경우 일정주기로 재요청 (요청하는 동안 컴포넌트는 로딩ui 표시 ) 
+2-2. 존재하지 않을 시 에러페이지로 이동
+
+3. 2-1~2-2를 웹소켓으로 대체 (후순위)
