--- a/todo.text
+++ b/todo.text
@@ -1,3 +1,8 @@
+
+
+
+
+
 캐릭터 이미지, 아이템 이미지, 레벨,직업,서버 등등 저장 정보 추가  
 
 꾸미기 
@@ -14,3 +19,13 @@
 2-2. 존재하지 않을 시 에러페이지로 이동
 
 3. 2-1~2-2를 웹소켓으로 대체 (후순위)
+
+
+
+1. submit 클릭 시  비활성화 
+
+2. submit 클릭 시 바로 상세페이지로 이동
+
+3. db에 데이터가 존재하지 않는 경우 && 대기열에 요청이 있는 경우 대기열을 주기적으로 조회하여 확인 
+
+ 
