FEAT:스낵바 레이어팝업 추가 , queue 처리 프로세스 분리 , 구조 리팩토링

--- a/todo.text
+++ b/todo.text
@@ -1,31 +1,29 @@
 
+-------------------
+/info
+현재 대기열에서 해당 캐릭터의 순번 확인 
+-> 순번이 -1 경우 이미 완료된 작업=DB에 존재 -> DB에 요청해서 보여줌  
+-> 순번이 1~10일 경우 해당 대기열 인원수를 보여줌 -> n초 후 다시 요청 
+
+--------완---------
+
+
+
+해야할것
+-------
+refetch 안되는 문제 해결 
+
+대기열 표시 & 스켈레톤 ui 
+
+--------------
 
 
 
 
-캐릭터 이미지, 아이템 이미지, 레벨,직업,서버 등등 저장 정보 추가  
-
-꾸미기 
-
-대기열-> bull 사용 
-
-중복요청 방지 
-
-0. 캐릭터 존재 여부 검사와 캐릭터 정보 받아오기 분리
-1. submit버튼 클릭 시 일정시간 비활성화
-2-1. submit버튼 클릭 시 캐릭터 존재 시 상세페이지로 이동 
-2-1-1. 상세페이지는 db에 정보가 존재하는지 요청을 보낸 후 존재 할 시 해당 내용을 출력
-2-1-2. 존재하지 않을 경우 일정주기로 재요청 (요청하는 동안 컴포넌트는 로딩ui 표시 ) 
-2-2. 존재하지 않을 시 에러페이지로 이동
-
-3. 2-1~2-2를 웹소켓으로 대체 (후순위)
 
 
 
-1. submit 클릭 시  비활성화 
 
-2. submit 클릭 시 바로 상세페이지로 이동
+lib폴더 queue.js 필요없음
+lib폴더 fetcher getCharacterUrl제외 필요없음
 
-3. db에 데이터가 존재하지 않는 경우 && 대기열에 요청이 있는 경우 대기열을 주기적으로 조회하여 확인 
-
- 
